--- a/mascotes.html
+++ b/mascotes.html
@@ -13,7 +13,7 @@
         <p></p>
     </header>
     <nav>
-        <a href="tabela.html">TABELAS</a>
+        <a href="index.html">TABELAS</a>
         <a href="">CURIOSIDADES COPA</a>
         <a href="">CAMISAS DA COPAS</a> 
         <a href="">TIME DOS PAISES</a>
